parser/src/snapshots/parser__tests__expr_array.snap
---
source: parser/src/lib.rs
expression: parse_expr(input)
---
{
  "id": 0,
  "kind": {
    "Array": [
      {
        "id": 0,
        "kind": {
          "Lit": {
            "span": {
              "start": 1,
              "end": 2
            },
            "kind": {
              "Number": {
                "unstable_source": "1"
              }
            }
          }
        },
        "span": {
          "start": 1,
          "end": 2
        },
        "ty": null
      },
      {
        "id": 0,
        "kind": {
          "Lit": {
            "span": {
              "start": 4,
              "end": 5
            },
            "kind": {
              "Number": {
                "unstable_source": "2"
              }
            }
          }
        },
        "span": {
          "start": 4,
          "end": 5
        },
        "ty": null
      },
      {
        "id": 0,
        "kind": {
          "Lit": {
            "span": {
              "start": 7,
              "end": 8
            },
            "kind": {
              "Number": {
                "unstable_source": "3"
              }
            }
          }
        },
        "span": {
          "start": 7,
          "end": 8
        },
        "ty": null
      }
    ]
  },
  "span": {
    "start": 0,
    "end": 9
  },
  "ty": null
}
