parser/src/snapshots/parser__tests__expr_boolean_false.snap
---
source: parser/src/lib.rs
expression: parse_expr(input)
---
{
  "id": 0,
  "kind": {
    "Lit": {
      "span": {
        "start": 0,
        "end": 5
      },
      "kind": {
        "Bool": {
          "unstable_source": "false"
        }
      }
    }
  },
  "span": {
    "start": 0,
    "end": 5
  },
  "ty": null
}
