parser/src/snapshots/parser__tests__expr_boolean_true.snap
---
source: parser/src/lib.rs
expression: parse_expr(input)
---
{
  "id": 0,
  "kind": {
    "Lit": {
      "span": {
        "start": 0,
        "end": 4
      },
      "kind": {
        "Bool": {
          "unstable_source": "true"
        }
      }
    }
  },
  "span": {
    "start": 0,
    "end": 4
  },
  "ty": null
}
