parser/src/snapshots/parser__tests__expr_float.snap
---
source: parser/src/lib.rs
expression: parse_expr(input)
---
{
  "id": 0,
  "kind": {
    "Lit": {
      "span": {
        "start": 0,
        "end": 5
      },
      "kind": {
        "Number": {
          "unstable_source": "12.34"
        }
      }
    }
  },
  "span": {
    "start": 0,
    "end": 5
  },
  "ty": null
}
