parser/src/snapshots/parser__tests__expr_long_float.snap
---
source: parser/src/lib.rs
expression: parse_expr(input)
---
{
  "id": 0,
  "kind": {
    "Lit": {
      "span": {
        "start": 0,
        "end": 14
      },
      "kind": {
        "Number": {
          "unstable_source": "23.32342123423"
        }
      }
    }
  },
  "span": {
    "start": 0,
    "end": 14
  },
  "ty": null
}
