parser/src/snapshots/parser__tests__expr_object.snap
---
source: parser/src/lib.rs
expression: parse_expr(input)
---
{
  "id": 0,
  "kind": {
    "Object": [
      [
        {
          "name": {
            "unstable_source": "a"
          },
          "span": {
            "start": 1,
            "end": 2
          }
        },
        {
          "id": 0,
          "kind": {
            "Lit": {
              "span": {
                "start": 4,
                "end": 5
              },
              "kind": {
                "Number": {
                  "unstable_source": "1"
                }
              }
            }
          },
          "span": {
            "start": 4,
            "end": 5
          },
          "ty": null
        }
      ],
      [
        {
          "name": {
            "unstable_source": "b"
          },
          "span": {
            "start": 7,
            "end": 8
          }
        },
        {
          "id": 0,
          "kind": {
            "Lit": {
              "span": {
                "start": 10,
                "end": 11
              },
              "kind": {
                "Number": {
                  "unstable_source": "2"
                }
              }
            }
          },
          "span": {
            "start": 10,
            "end": 11
          },
          "ty": null
        }
      ]
    ]
  },
  "span": {
    "start": 0,
    "end": 12
  },
  "ty": null
}
