parser/src/snapshots/parser__tests__fixture_control_flow.snap
---
source: parser/src/lib.rs
expression: parse_module(input)
---
{
  "items": [
    {
      "kind": {
        "Fn": {
          "name": {
            "name": {
              "unstable_source": "control_flow"
            },
            "span": {
              "start": 3,
              "end": 15
            }
          },
          "params": {
            "Multi": [
              {
                "local": {
                  "Ident": [
                    {
                      "name": {
                        "unstable_source": "a"
                      },
                      "span": {
                        "start": 16,
                        "end": 17
                      }
                    },
                    {
                      "start": 16,
                      "end": 17
                    }
                  ]
                },
                "ty": "Existential",
                "id": 0,
                "span": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "local": {
                  "Ident": [
                    {
                      "name": {
                        "unstable_source": "b"
                      },
                      "span": {
                        "start": 19,
                        "end": 20
                      }
                    },
                    {
                      "start": 19,
                      "end": 20
                    }
                  ]
                },
                "ty": "Existential",
                "id": 0,
                "span": {
                  "start": 19,
                  "end": 20
                }
              }
            ]
          },
          "body": {
            "stmts": [
              {
                "id": 0,
                "kind": {
                  "If": {
                    "span": {
                      "start": 28,
                      "end": 103
                    },
                    "condition": {
                      "id": 0,
                      "kind": {
                        "Lit": {
                          "span": {
                            "start": 31,
                            "end": 35
                          },
                          "kind": {
                            "Bool": {
                              "unstable_source": "true"
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 31,
                        "end": 35
                      },
                      "ty": null
                    },
                    "block": {
                      "stmts": [
                        {
                          "id": 0,
                          "kind": {
                            "Local": {
                              "id": 0,
                              "name": {
                                "Ident": [
                                  {
                                    "name": {
                                      "unstable_source": "a"
                                    },
                                    "span": {
                                      "start": 50,
                                      "end": 51
                                    }
                                  },
                                  {
                                    "start": 50,
                                    "end": 51
                                  }
                                ]
                              },
                              "ty": null,
                              "init": {
                                "id": 0,
                                "kind": {
                                  "Reference": {
                                    "name": {
                                      "unstable_source": "b"
                                    },
                                    "span": {
                                      "start": 54,
                                      "end": 55
                                    }
                                  }
                                },
                                "span": {
                                  "start": 54,
                                  "end": 55
                                },
                                "ty": null
                              },
                              "span": {
                                "start": 46,
                                "end": 55
                              }
                            }
                          },
                          "span": {
                            "start": 46,
                            "end": 56
                          },
                          "has_semi": false
                        }
                      ],
                      "id": 0,
                      "span": {
                        "start": 36,
                        "end": 62
                      }
                    },
                    "alt": {
                      "If": {
                        "span": {
                          "start": 68,
                          "end": 103
                        },
                        "condition": {
                          "id": 0,
                          "kind": {
                            "Lit": {
                              "span": {
                                "start": 71,
                                "end": 76
                              },
                              "kind": {
                                "Bool": {
                                  "unstable_source": "false"
                                }
                              }
                            }
                          },
                          "span": {
                            "start": 71,
                            "end": 76
                          },
                          "ty": null
                        },
                        "block": {
                          "stmts": [
                            {
                              "id": 0,
                              "kind": {
                                "Local": {
                                  "id": 0,
                                  "name": {
                                    "Ident": [
                                      {
                                        "name": {
                                          "unstable_source": "c"
                                        },
                                        "span": {
                                          "start": 91,
                                          "end": 92
                                        }
                                      },
                                      {
                                        "start": 91,
                                        "end": 92
                                      }
                                    ]
                                  },
                                  "ty": null,
                                  "init": {
                                    "id": 0,
                                    "kind": {
                                      "Lit": {
                                        "span": {
                                          "start": 95,
                                          "end": 96
                                        },
                                        "kind": {
                                          "Number": {
                                            "unstable_source": "4"
                                          }
                                        }
                                      }
                                    },
                                    "span": {
                                      "start": 95,
                                      "end": 96
                                    },
                                    "ty": null
                                  },
                                  "span": {
                                    "start": 87,
                                    "end": 96
                                  }
                                }
                              },
                              "span": {
                                "start": 87,
                                "end": 97
                              },
                              "has_semi": false
                            }
                          ],
                          "id": 0,
                          "span": {
                            "start": 77,
                            "end": 103
                          }
                        },
                        "alt": null
                      }
                    }
                  }
                },
                "span": {
                  "start": 28,
                  "end": 103
                },
                "has_semi": false
              },
              {
                "id": 0,
                "kind": {
                  "If": {
                    "span": {
                      "start": 108,
                      "end": 174
                    },
                    "condition": {
                      "id": 0,
                      "kind": {
                        "Binary": [
                          "DblEquals",
                          {
                            "id": 0,
                            "kind": {
                              "Reference": {
                                "name": {
                                  "unstable_source": "a"
                                },
                                "span": {
                                  "start": 111,
                                  "end": 112
                                }
                              }
                            },
                            "span": {
                              "start": 111,
                              "end": 112
                            },
                            "ty": null
                          },
                          {
                            "id": 0,
                            "kind": {
                              "Reference": {
                                "name": {
                                  "unstable_source": "b"
                                },
                                "span": {
                                  "start": 116,
                                  "end": 117
                                }
                              }
                            },
                            "span": {
                              "start": 116,
                              "end": 117
                            },
                            "ty": null
                          }
                        ]
                      },
                      "span": {
                        "start": 111,
                        "end": 117
                      },
                      "ty": null
                    },
                    "block": {
                      "stmts": [
                        {
                          "id": 0,
                          "kind": {
                            "Return": {
                              "id": 0,
                              "kind": {
                                "Reference": {
                                  "name": {
                                    "unstable_source": "a"
                                  },
                                  "span": {
                                    "start": 135,
                                    "end": 136
                                  }
                                }
                              },
                              "span": {
                                "start": 135,
                                "end": 136
                              },
                              "ty": null
                            }
                          },
                          "span": {
                            "start": 128,
                            "end": 137
                          },
                          "has_semi": false
                        }
                      ],
                      "id": 0,
                      "span": {
                        "start": 118,
                        "end": 143
                      }
                    },
                    "alt": {
                      "Block": {
                        "stmts": [
                          {
                            "id": 0,
                            "kind": {
                              "Return": {
                                "id": 0,
                                "kind": {
                                  "Reference": {
                                    "name": {
                                      "unstable_source": "b"
                                    },
                                    "span": {
                                      "start": 166,
                                      "end": 167
                                    }
                                  }
                                },
                                "span": {
                                  "start": 166,
                                  "end": 167
                                },
                                "ty": null
                              }
                            },
                            "span": {
                              "start": 159,
                              "end": 168
                            },
                            "has_semi": false
                          }
                        ],
                        "id": 0,
                        "span": {
                          "start": 149,
                          "end": 174
                        }
                      }
                    }
                  }
                },
                "span": {
                  "start": 108,
                  "end": 174
                },
                "has_semi": false
              },
              {
                "id": 0,
                "kind": {
                  "Return": {
                    "id": 0,
                    "kind": {
                      "Lit": {
                        "span": {
                          "start": 186,
                          "end": 187
                        },
                        "kind": {
                          "Number": {
                            "unstable_source": "4"
                          }
                        }
                      }
                    },
                    "span": {
                      "start": 186,
                      "end": 187
                    },
                    "ty": null
                  }
                },
                "span": {
                  "start": 179,
                  "end": 188
                },
                "has_semi": false
              }
            ],
            "id": 0,
            "span": {
              "start": 22,
              "end": 190
            }
          },
          "return_ty": "Existential",
          "is_async": false,
          "generics": null,
          "span": {
            "start": 0,
            "end": 190
          }
        }
      },
      "span": {
        "start": 0,
        "end": 190
      }
    }
  ]
}
