parser/src/snapshots/parser__tests__fixture_function_simple.snap
---
source: parser/src/lib.rs
expression: parse_module(input)
---
{
  "items": [
    {
      "kind": {
        "Fn": {
          "name": {
            "symbol": {
              "unstable_source": "add"
            },
            "span": {
              "start": 24,
              "end": 27
            }
          },
          "params": {
            "Multi": [
              {
                "local": {
                  "Ident": [
                    {
                      "symbol": {
                        "unstable_source": "a"
                      },
                      "span": {
                        "start": 28,
                        "end": 29
                      }
                    },
                    {
                      "start": 28,
                      "end": 29
                    }
                  ]
                },
                "ty": {
                  "Number": {
                    "start": 31,
                    "end": 37
                  }
                },
                "id": 0,
                "span": {
                  "start": 28,
                  "end": 37
                }
              },
              {
                "local": {
                  "Ident": [
                    {
                      "symbol": {
                        "unstable_source": "b"
                      },
                      "span": {
                        "start": 39,
                        "end": 40
                      }
                    },
                    {
                      "start": 39,
                      "end": 40
                    }
                  ]
                },
                "ty": {
                  "Number": {
                    "start": 42,
                    "end": 48
                  }
                },
                "id": 0,
                "span": {
                  "start": 39,
                  "end": 48
                }
              }
            ]
          },
          "body": {
            "stmts": [
              {
                "id": 0,
                "kind": {
                  "Local": {
                    "id": 0,
                    "name": {
                      "Ident": [
                        {
                          "symbol": {
                            "unstable_source": "result"
                          },
                          "span": {
                            "start": 69,
                            "end": 75
                          }
                        },
                        {
                          "start": 69,
                          "end": 75
                        }
                      ]
                    },
                    "ty": null,
                    "init": {
                      "kind": {
                        "Binary": [
                          "Add",
                          {
                            "kind": {
                              "Reference": {
                                "symbol": {
                                  "unstable_source": "a"
                                },
                                "span": {
                                  "start": 78,
                                  "end": 79
                                }
                              }
                            },
                            "span": {
                              "start": 78,
                              "end": 79
                            }
                          },
                          {
                            "kind": {
                              "Reference": {
                                "symbol": {
                                  "unstable_source": "b"
                                },
                                "span": {
                                  "start": 82,
                                  "end": 83
                                }
                              }
                            },
                            "span": {
                              "start": 82,
                              "end": 83
                            }
                          }
                        ]
                      },
                      "span": {
                        "start": 78,
                        "end": 83
                      }
                    },
                    "span": {
                      "start": 65,
                      "end": 83
                    }
                  }
                },
                "span": {
                  "start": 65,
                  "end": 84
                },
                "has_semi": true
              },
              {
                "id": 0,
                "kind": {
                  "Return": {
                    "kind": {
                      "Reference": {
                        "symbol": {
                          "unstable_source": "result"
                        },
                        "span": {
                          "start": 96,
                          "end": 102
                        }
                      }
                    },
                    "span": {
                      "start": 96,
                      "end": 102
                    }
                  }
                },
                "span": {
                  "start": 89,
                  "end": 103
                },
                "has_semi": true
              }
            ],
            "id": 0,
            "span": {
              "start": 59,
              "end": 105
            }
          },
          "return_ty": {
            "Number": {
              "start": 52,
              "end": 58
            }
          },
          "is_async": false,
          "generics": null,
          "span": {
            "start": 21,
            "end": 105
          }
        }
      },
      "span": {
        "start": 21,
        "end": 105
      }
    }
  ]
}
