parser/src/snapshots/parser__tests__stmt_ident_names.snap
---
source: parser/src/lib.rs
expression: parse_stmts(input)
---
[
  {
    "id": 0,
    "kind": {
      "Local": {
        "id": 0,
        "name": {
          "Ident": [
            {
              "name": {
                "unstable_source": "a"
              },
              "span": {
                "start": 13,
                "end": 14
              }
            },
            {
              "start": 13,
              "end": 14
            }
          ]
        },
        "ty": null,
        "init": {
          "id": 0,
          "kind": {
            "Lit": {
              "span": {
                "start": 17,
                "end": 18
              },
              "kind": {
                "Number": {
                  "unstable_source": "1"
                }
              }
            }
          },
          "span": {
            "start": 17,
            "end": 18
          },
          "ty": null
        },
        "span": {
          "start": 9,
          "end": 18
        }
      }
    },
    "span": {
      "start": 9,
      "end": 18
    },
    "has_semi": false
  },
  {
    "id": 0,
    "kind": {
      "Local": {
        "id": 0,
        "name": {
          "Ident": [
            {
              "name": {
                "unstable_source": "longerName"
              },
              "span": {
                "start": 31,
                "end": 41
              }
            },
            {
              "start": 31,
              "end": 41
            }
          ]
        },
        "ty": null,
        "init": {
          "id": 0,
          "kind": {
            "Lit": {
              "span": {
                "start": 44,
                "end": 45
              },
              "kind": {
                "Number": {
                  "unstable_source": "2"
                }
              }
            }
          },
          "span": {
            "start": 44,
            "end": 45
          },
          "ty": null
        },
        "span": {
          "start": 27,
          "end": 45
        }
      }
    },
    "span": {
      "start": 27,
      "end": 45
    },
    "has_semi": false
  },
  {
    "id": 0,
    "kind": {
      "Local": {
        "id": 0,
        "name": {
          "Ident": [
            {
              "name": {
                "unstable_source": "longerNameWith_underscore"
              },
              "span": {
                "start": 58,
                "end": 83
              }
            },
            {
              "start": 58,
              "end": 83
            }
          ]
        },
        "ty": null,
        "init": {
          "id": 0,
          "kind": {
            "Lit": {
              "span": {
                "start": 86,
                "end": 87
              },
              "kind": {
                "Number": {
                  "unstable_source": "3"
                }
              }
            }
          },
          "span": {
            "start": 86,
            "end": 87
          },
          "ty": null
        },
        "span": {
          "start": 54,
          "end": 87
        }
      }
    },
    "span": {
      "start": 54,
      "end": 87
    },
    "has_semi": false
  },
  {
    "id": 0,
    "kind": {
      "Local": {
        "id": 0,
        "name": {
          "Ident": [
            {
              "name": {
                "unstable_source": "_"
              },
              "span": {
                "start": 100,
                "end": 101
              }
            },
            {
              "start": 100,
              "end": 101
            }
          ]
        },
        "ty": null,
        "init": {
          "id": 0,
          "kind": {
            "Lit": {
              "span": {
                "start": 104,
                "end": 105
              },
              "kind": {
                "Number": {
                  "unstable_source": "4"
                }
              }
            }
          },
          "span": {
            "start": 104,
            "end": 105
          },
          "ty": null
        },
        "span": {
          "start": 96,
          "end": 105
        }
      }
    },
    "span": {
      "start": 96,
      "end": 105
    },
    "has_semi": false
  },
  {
    "id": 0,
    "kind": {
      "Local": {
        "id": 0,
        "name": {
          "Ident": [
            {
              "name": {
                "unstable_source": "_leadingUnderscore"
              },
              "span": {
                "start": 118,
                "end": 136
              }
            },
            {
              "start": 118,
              "end": 136
            }
          ]
        },
        "ty": null,
        "init": {
          "id": 0,
          "kind": {
            "Lit": {
              "span": {
                "start": 139,
                "end": 140
              },
              "kind": {
                "Number": {
                  "unstable_source": "5"
                }
              }
            }
          },
          "span": {
            "start": 139,
            "end": 140
          },
          "ty": null
        },
        "span": {
          "start": 114,
          "end": 140
        }
      }
    },
    "span": {
      "start": 114,
      "end": 140
    },
    "has_semi": false
  }
]
